--- a/java/native-image/spring-boot-native-image-maven/pom.xml
+++ b/java/native-image/spring-boot-native-image-maven/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.0</version>
+		<version>3.2.4</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>io.paketo</groupId>
@@ -48,6 +48,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<image>
+						<buildpacks>
+							<buildpack>paketobuildpacks/java-native-image:beta</buildpack>
+						</buildpacks>
+						<builder>paketobuildpacks/builder-jammy-buildpackless-tiny</builder>
+					</image>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
