Update dependencies in OpenTelemetry Java sample
Signed-off-by: Thomas Vitale <ThomasVitale@users.noreply.github.com>

--- a/java/opentelemetry/build.gradle
+++ b/java/opentelemetry/build.gradle
@@ -1,15 +1,20 @@
 plugins {
-	id 'org.springframework.boot' version '2.7.15'
-	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
-	id 'java'
+  id 'java'
+  id 'org.springframework.boot' version '3.3.0'
+  id 'io.spring.dependency-management' version '1.1.5'
 }
 
 group = 'io.paketo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '1.8'
+
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
+}
 
 jar {
-    enabled = false
+  enabled = false
 }
 
 repositories {
@@ -18,11 +23,11 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	testImplementation'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+  testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
-test {
-	useJUnitPlatform()
+tasks.named('test') {
+  useJUnitPlatform()
 }
