--- a/java/native-image/spring-boot-native-image-gradle/build.gradle
+++ b/java/native-image/spring-boot-native-image-gradle/build.gradle
@@ -1,8 +1,8 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.10'
-    id 'org.graalvm.buildtools.native' version '0.9.21'
-	id 'io.spring.dependency-management' version '1.1.3'
+	id 'org.springframework.boot' version '3.3.2'
+  id 'org.graalvm.buildtools.native' version '0.9.21'
+	id 'io.spring.dependency-management' version '1.1.6'
 }
 
 group = 'io.paketo'
@@ -31,4 +31,11 @@ dependencies {
 
 test {
 	useJUnitPlatform()
+}
+
+tasks.named("bootBuildImage") {
+    builder = "paketobuildpacks/builder-jammy-buildpackless-tiny"
+    buildpacks = [
+        "paketobuildpacks/java-native-image"
+    ]
 }
