--- a/java/gradle/build.gradle
+++ b/java/gradle/build.gradle
@@ -6,7 +6,10 @@ plugins {
 
 group = 'io.paketo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_17
+}
 
 jar {
     enabled = false
