--- a/.github/workflows/java-quarkus-native-image-maven.yml
+++ b/.github/workflows/java-quarkus-native-image-maven.yml
@@ -3,25 +3,25 @@ name: java-quarkus-native-image-maven
   merge_group:
   pull_request:
     paths:
-    - java/native-image/quarkus-native-image-maven/**
+      - java/native-image/quarkus-native-image-maven/**
   push:
     branches:
-    - main
+      - main
     paths:
-    - java/native-image/quarkus-native-image-maven/**
+      - java/native-image/quarkus-native-image-maven/**
 
 jobs:
   test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java: [17]
+        java: [21]
 
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-java@v4
         with:
           java-version: ${{ matrix.java }}
-          distribution: 'zulu'
+          distribution: "zulu"
       - run: ./mvnw -B package -Djava.version=${{ matrix.java }}
         working-directory: java/native-image/quarkus-native-image-maven
