Add simple WAR test that does not use Spring
Signed-off-by: Daniel Mikusa <dan@mikusa.com>

--- a/java/war/.gitignore
+++ b/java/war/.gitignore
@@ -1,31 +1,5 @@
-HELP.md
-target/
-!.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**
-!**/src/test/**
+# Ignore Gradle project-specific cache directory
+.gradle
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-build/
-
-### VS Code ###
-.vscode/
+# Ignore Gradle build output directory
+build
