--- a/python/poetry/pyproject.toml
+++ b/python/poetry/pyproject.toml
@@ -3,13 +3,12 @@ name = "default_app"
 version = "0.1.0"
 description = ""
 authors = []
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.10"
 Flask = "2.3.2"
 gunicorn = "^20.1.0"
-
-[tool.poetry.dev-dependencies]
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
