--- a/java/java-node/gradle-node/build.gradle
+++ b/java/java-node/gradle-node/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.4.5'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.springframework.boot' version '3.5.+'
+	id 'io.spring.dependency-management' version '1.1.+'
 }
 
 group = 'io.paketo'
