--- a/.github/workflows/test-pull-request-java.yml
+++ b/.github/workflows/test-pull-request-java.yml
@@ -6,7 +6,7 @@ on:
     branches:
       - main
     paths:
-      - 'java/**'
+      - "java/**"
 
 jobs:
   prepare:
@@ -27,11 +27,11 @@ jobs:
           # Since we're only interested in the folders containing those files, we get them, sort them alphabetically (`sort`), de duplicate them (`uniq`) and filter out dot folders (.github for example)
           # we end up with, for example, changed_java_folders="java/akka/smoke_test\njava/kotlin/gradle/wrapper\njava/application-insights"
           changed_java_folders=$(  git diff --name-only --merge-base origin/$GITHUB_BASE_REF $GITHUB_SHA  | xargs -n 1 dirname | sort -k 2 | uniq | grep -v "^\." )
-          
+
           # 2nd step: we only want to keep the folders that contain a `smoke_test` subfolder -> those contain the tests we can run
           # To do that, we loop through all the changed_java_folders and test (`-s`) for a sub folder named `smoke_test`; if there's none, we go to the parent directory (`dirname`)
           # eventually, we'll find a `smoke_test` folder and add it to `smoke_test_folders`; if not, we move on to the next changed_java_folders entry (until the `.` folder in which case we give up)
-          
+
           smoke_test_folders=""
           while read -r changed_folder
           do
@@ -80,6 +80,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Smoke Test Java samples
+        env:
+          TESTCONTAINERS_RYUK_DISABLED: true
+          TESTCONTAINERS_RYUK_CONTAINER_PRIVILEGED: true
         run: |
           echo "About to run the smoke test script against this suite folder: ${{ matrix.java_sample_folder }}/smoke_test"
           ./scripts/smoke.sh --suite ${{ matrix.java_sample_folder }} \
