Limit max parallel jobs during smoke tests
Signed-off-by: Daniel Mikusa <dan@mikusa.com>

--- a/.github/workflows/test-pull-request-java.yml
+++ b/.github/workflows/test-pull-request-java.yml
@@ -68,6 +68,7 @@ jobs:
     name: Smoke Tests
     runs-on: ubuntu-latest
     strategy:
+      max-parallel: 1
       matrix: ${{ fromJSON(needs.prepare.outputs.matrix) }}
 
     steps:
