--- a/java/gradle/bindings/gradle-wrapper/gradle-wrapper.properties
+++ b/java/gradle/bindings/gradle-wrapper/gradle-wrapper.properties
@@ -1,2 +1,7 @@
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.6-bin.zip
-networkTimeout=60000
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.14.2-bin.zip
+networkTimeout=10000
+validateDistributionUrl=true
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
