--- a/java/dist-zip/build.gradle
+++ b/java/dist-zip/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.3.4'
-	id 'io.spring.dependency-management' version '1.1.7'
+	id 'org.springframework.boot' version '3.5.+'
+	id 'io.spring.dependency-management' version '1.1.+'
 	id 'application'
 }
 
@@ -23,3 +23,20 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+tasks.named("bootDistTar") {
+	archiveClassifier = 'boot'
+}
+
+tasks.named("bootDistZip") {
+	archiveClassifier = 'boot'
+}
+
+tasks.named("distTar") {
+	archiveClassifier = 'std'
+}
+
+tasks.named("distZip") {
+	archiveClassifier = 'std'
+}
+
