--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,13 +1,13 @@
-*                @paketo-buildpacks/content-maintainers
-ca-certificates/ @paketo-buildpacks/utilities-maintainers
-dotnet-core/     @paketo-buildpacks/dotnet-core-maintainers
-git/             @paketo-buildpacks/utilities-maintainers
-go/              @paketo-buildpacks/go-maintainers
-java/            @paketo-buildpacks/java-maintainers
-nginx/           @paketo-buildpacks/web-servers-maintainers
-nodejs/          @paketo-buildpacks/nodejs-maintainers
-php/             @paketo-buildpacks/php-maintainers
-procfile/        @paketo-buildpacks/utilities-maintainers
-python/          @paketo-buildpacks/python-maintainers
-ruby/            @paketo-buildpacks/ruby-maintainers
-web-servers/     @paketo-buildpacks/web-servers-maintainers
+*                @paketo-buildpacks/content-maintainers @paketo-buildpacks/steering-committee
+ca-certificates/ @paketo-buildpacks/utilities-maintainers @paketo-buildpacks/steering-committee
+dotnet-core/     @paketo-buildpacks/dotnet-core-maintainers @paketo-buildpacks/steering-committee
+git/             @paketo-buildpacks/utilities-maintainers @paketo-buildpacks/steering-committee
+go/              @paketo-buildpacks/go-maintainers @paketo-buildpacks/steering-committee
+java/            @paketo-buildpacks/java-maintainers @paketo-buildpacks/steering-committee
+nginx/           @paketo-buildpacks/web-servers-maintainers @paketo-buildpacks/steering-committee
+nodejs/          @paketo-buildpacks/nodejs-maintainers @paketo-buildpacks/steering-committee
+php/             @paketo-buildpacks/php-maintainers @paketo-buildpacks/steering-committee
+procfile/        @paketo-buildpacks/utilities-maintainers @paketo-buildpacks/steering-committee
+python/          @paketo-buildpacks/python-maintainers @paketo-buildpacks/steering-committee
+ruby/            @paketo-buildpacks/ruby-maintainers @paketo-buildpacks/steering-committee
+web-servers/     @paketo-buildpacks/web-servers-maintainers @paketo-buildpacks/steering-committee
