--- a/java/native-image/spring-boot-native-image-gradle/build.gradle
+++ b/java/native-image/spring-boot-native-image-gradle/build.gradle
@@ -7,7 +7,12 @@ plugins {
 
 group = 'io.paketo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '25'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(25)
+    }
+}
 
 jar {
     // see https://github.com/spring-projects/spring-boot/issues/33238
