Update to work with Gradle 9
Signed-off-by: Daniel Mikusa <dan@mikusa.com>

--- a/java/dist-zip/build.gradle
+++ b/java/dist-zip/build.gradle
@@ -7,7 +7,12 @@ plugins {
 
 group = 'io.paketo'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 repositories {
 	mavenCentral()
